update to for coffee shops final

--- a/for-coffee-shops-final.html
+++ b/for-coffee-shops-final.html
@@ -168,6 +168,28 @@
             text-decoration: none;
             border-bottom: 1px solid var(--gray-200);
         }
+        .mobile-dropdown-trigger {
+            display: block;
+            padding: 1rem 0;
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: var(--gray-900);
+            border-bottom: 1px solid var(--gray-200);
+            cursor: pointer;
+        }
+        .mobile-dropdown {
+            display: none;
+            padding: 0.5rem 0 0.5rem 1rem;
+            border-bottom: 1px solid var(--gray-200);
+        }
+        .mobile-dropdown.active { display: block; }
+        .mobile-dropdown a {
+            display: block;
+            padding: 0.75rem 0;
+            font-size: 1rem;
+            color: var(--gray-600);
+            text-decoration: none;
+        }
 
         .btn {
             padding: 0.75rem 1.5rem;
@@ -417,19 +439,20 @@
             <li>
                 <span class="nav-dropdown-trigger">Company</span>
                 <div class="nav-dropdown">
-                    <a href="/about/">About Us</a>
-                    <a href="/blog/">Blog</a>
-                    <a href="/partners/">Partners</a>
-                    <a href="/careers/">Careers</a>
+                    <a href="https://joe.coffee/about/">About</a>
+                    <a href="https://joe.coffee/blog/">Blog</a>
+                    <a href="https://joe.coffee/testimonials/">Partner Stories</a>
+                    <a href="https://joe-partner-community.circle.so/home?post_login_redirect=https%3A%2F%2Fjoe-partner-community.circle.so%2F">Community Hub</a>
+                    <a href="https://support.joe.coffee/hc/en-us">Support & FAQs</a>
                 </div>
             </li>
             <li>
                 <span class="nav-dropdown-trigger">Solutions</span>
                 <div class="nav-dropdown">
-                    <a href="#system">The System</a>
-                    <a href="#pricing">Pricing</a>
-                    <a href="/marketplace/">Marketplace</a>
-                    <a href="/locations/">Find Shops</a>
+                    <a href="https://joe.coffee/point-of-sale-for-coffee-shops/">POS for Coffee Shops</a>
+                    <a href="https://joe.coffee/rewards/">Rewards & Loyalty</a>
+                    <a href="https://joe.coffee/gift-cards/">Gift Cards</a>
+                    <a href="https://joe.coffee/point-of-sale-for-coffee-shops/">See All Features</a>
                 </div>
             </li>
         </ul>
@@ -444,7 +467,21 @@
     <div class="mobile-menu" id="mobileMenu">
         <a href="/" class="mobile-nav-link">For Coffee Lovers</a>
         <a href="/for-coffee-shops/" class="mobile-nav-link">For Coffee Shops</a>
-        <a href="/about/" class="mobile-nav-link">About</a>
+        <div class="mobile-dropdown-trigger" id="mobileCompanyTrigger">Company</div>
+        <div class="mobile-dropdown" id="mobileCompanyDropdown">
+            <a href="https://joe.coffee/about/">About</a>
+            <a href="https://joe.coffee/blog/">Blog</a>
+            <a href="https://joe.coffee/testimonials/">Partner Stories</a>
+            <a href="https://joe-partner-community.circle.so/home?post_login_redirect=https%3A%2F%2Fjoe-partner-community.circle.so%2F">Community Hub</a>
+            <a href="https://support.joe.coffee/hc/en-us">Support & FAQs</a>
+        </div>
+        <div class="mobile-dropdown-trigger" id="mobileSolutionsTrigger">Solutions</div>
+        <div class="mobile-dropdown" id="mobileSolutionsDropdown">
+            <a href="https://joe.coffee/point-of-sale-for-coffee-shops/">POS for Coffee Shops</a>
+            <a href="https://joe.coffee/rewards/">Rewards & Loyalty</a>
+            <a href="https://joe.coffee/gift-cards/">Gift Cards</a>
+            <a href="https://joe.coffee/point-of-sale-for-coffee-shops/">See All Features</a>
+        </div>
         <a href="#contact" class="btn btn-primary btn-large" style="margin-top: 2rem;">Talk to Us</a>
     </div>
 
@@ -533,7 +570,7 @@
                         </ul>
                     </article>
                     <article class="pillar reveal reveal-delay-3">
-                        <div class="pillar-icon">🏦</div>
+                        <div class="pillar-icon">🦁</div>
                         <h3 class="pillar-title">Joe Finance</h3>
                         <p class="pillar-desc">Transparent, predictable, aligned.</p>
                         <ul class="pillar-features">
@@ -879,6 +916,23 @@
                 mobileMenuBtn.classList.toggle('active');
                 mobileMenu.classList.toggle('active');
                 document.body.style.overflow = mobileMenu.classList.contains('active') ? 'hidden' : '';
+            });
+        }
+
+        // Mobile dropdown toggles
+        var mobileCompanyTrigger = document.getElementById('mobileCompanyTrigger');
+        var mobileCompanyDropdown = document.getElementById('mobileCompanyDropdown');
+        var mobileSolutionsTrigger = document.getElementById('mobileSolutionsTrigger');
+        var mobileSolutionsDropdown = document.getElementById('mobileSolutionsDropdown');
+        
+        if (mobileCompanyTrigger) {
+            mobileCompanyTrigger.addEventListener('click', function() {
+                mobileCompanyDropdown.classList.toggle('active');
+            });
+        }
+        if (mobileSolutionsTrigger) {
+            mobileSolutionsTrigger.addEventListener('click', function() {
+                mobileSolutionsDropdown.classList.toggle('active');
             });
         }
 
