fix: syntax error in activity timeline

--- a/crm/index.html
+++ b/crm/index.html
@@ -5746,7 +5746,7 @@ async function showDealPage(id){
             <div style="color:#666">${a.notes||''}</div>
             <div style="font-size:11px;color:var(--joe-gray);margin-top:4px">${a.team_member_name||a.team_member_email||''}</div>
           </div>`;
-        }).join(''):'<div class="empty-state">No activity yet${currentActivityFilter!=='all'?' for #'+currentActivityFilter:''}. Log a call, email, or note above.</div>';
+        }).join(''):('<div class="empty-state">No activity yet'+(currentActivityFilter!=='all'?' for #'+currentActivityFilter:'')+'. Log a call, email, or note above.</div>');
       }
       
       function filterDealActivity(filter){
