--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1066,20 +1066,11 @@
                 return res.json();
             }).then(function(data) {
                 console.log('CRM response:', data);
-                submitBtn.textContent = 'Submitted!';
-                setTimeout(function() {
-                    alert('Thanks! We\'ll be in touch within 24 hours.');
-                    form.reset();
-                    submitBtn.textContent = originalText;
-                    submitBtn.disabled = false;
-                }, 500);
+                window.location.href = '/thank-you.html';
             }).catch(function(error) {
                 console.error('Error:', error);
-                // Still show success if Netlify form worked
-                alert('Thanks! We\'ll be in touch within 24 hours.');
-                form.reset();
-                submitBtn.textContent = originalText;
-                submitBtn.disabled = false;
+                // Still redirect even if CRM failed (Netlify form worked)
+                window.location.href = '/thank-you.html';
             });
         });
     </script>
