--- a/crm/index.html
+++ b/crm/index.html
@@ -11956,15 +11956,14 @@ ${activity.notes||'No notes'}`);
     function toggleTeamFields(){
       const role=document.getElementById('member-role').value;
       const handlesGroup=document.getElementById('member-handles-group');
-      const territoryGroup=document.getElementById('member-territory-group');
       
+      // Hide "Handles" for support role (they don't need sales/onboarding/success categories)
       if(role==='support'){
         if(handlesGroup)handlesGroup.style.display='none';
-        if(territoryGroup)territoryGroup.style.display='none';
       }else{
         if(handlesGroup)handlesGroup.style.display='block';
-        if(territoryGroup)territoryGroup.style.display='block';
       }
+      // Territory is always visible for all roles
     }
     
     async function addSupportTeamMember(){
