fix twilio calling sid

--- a/crm/index.html
+++ b/crm/index.html
@@ -6946,7 +6946,7 @@ async function showDealPage(id){
           // Twilio call
           const twilioPhone=localStorage.getItem('twilio_phone');
           
-          if(!sid||!token||!twilioPhone){
+          if(!twilioPhone){
             showToast('Configure Twilio in Settings > API Keys first','error');
             return;
           }
