Fix date display, photo saving, and reschedule link in calendar

--- a/crm/index.html
+++ b/crm/index.html
@@ -10908,7 +10908,7 @@ ${activity.notes||'No notes'}`);
           email: currentUser.email,
           name: currentUser.name || currentUser.email.split('@')[0],
           username: username,
-          photo_url: currentUser.picture || null,
+          photo_url: currentUser.avatar || null,
           role: 'member'
         }]).select().single();
         teamMember = newMember;
