Fix Google photo saving - use currentUser.avatar

--- a/crm/index.html
+++ b/crm/index.html
@@ -10916,7 +10916,7 @@ ${activity.notes||'No notes'}`);
         // Existing team member but no username - add one
         const username = currentUser.email.split('@')[0].replace(/[^a-z0-9]/gi, '').toLowerCase();
         const { data: updatedMember } = await db.from('team_members')
-          .update({ username: username, photo_url: teamMember.photo_url || currentUser.picture || null })
+          .update({ username: username, photo_url: teamMember.photo_url || currentUser.avatar || null })
           .eq('id', teamMember.id)
           .select()
           .single();
