Fix typo: aasync -> async

--- a/crm/index.html
+++ b/crm/index.html
@@ -11527,7 +11527,7 @@ ${activity.notes||'No notes'}`);
       document.getElementById('signature-preview-modal').classList.add('open');
     }
     
-    aasync function saveEmailTemplate(){
+    async function saveEmailTemplate(){
       const name=document.getElementById('template-name').value.trim();
       const category=document.getElementById('template-category').value;
       const cc=document.getElementById('template-cc').value.trim();
