Add email signature editor, black schedule button

--- a/crm/index.html
+++ b/crm/index.html
@@ -1098,7 +1098,32 @@
             </div>
           </div>
         </div>
-
+        <!-- Email Signature -->
+        <div class="card" style="margin-top:24px">
+          <div class="card-header"><h2>✍️ Email Signature</h2></div>
+          <div class="card-body">
+            <div style="display:grid;grid-template-columns:100px 1fr;gap:20px">
+              <div>
+                <div style="width:80px;height:80px;border-radius:50%;background:var(--joe-light);display:flex;align-items:center;justify-content:center;overflow:hidden;margin-bottom:8px" id="sig-photo-preview">
+                  <span style="font-size:32px;color:var(--joe-gray)">👤</span>
+                </div>
+                <div style="font-size:10px;color:var(--joe-gray)">Google photo</div>
+              </div>
+              <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px">
+                <div class="form-group" style="margin:0"><label style="font-size:12px">Full Name</label><input type="text" id="sig-name" placeholder="John Smith" style="padding:8px"></div>
+                <div class="form-group" style="margin:0"><label style="font-size:12px">Title</label><input type="text" id="sig-title" placeholder="Account Executive" style="padding:8px"></div>
+                <div class="form-group" style="margin:0"><label style="font-size:12px">Email</label><input type="email" id="sig-email" placeholder="john@joe.coffee" style="padding:8px"></div>
+                <div class="form-group" style="margin:0"><label style="font-size:12px">Phone</label><input type="tel" id="sig-phone" placeholder="(555) 123-4567" style="padding:8px"></div>
+                <div class="form-group" style="margin:0"><label style="font-size:12px">Company</label><input type="text" id="sig-company" value="joe" placeholder="joe" style="padding:8px"></div>
+                <div class="form-group" style="margin:0"><label style="font-size:12px">Scheduling Link</label><input type="url" id="sig-calendar" placeholder="https://joe.coffee/schedule/you" style="padding:8px"></div>
+              </div>
+            </div>
+            <div style="display:flex;gap:8px;margin-top:16px">
+              <button class="btn btn-primary btn-small" onclick="saveSignature()">💾 Save Signature</button>
+              <button class="btn btn-secondary btn-small" onclick="previewSignature()">👁️ Preview</button>
+            </div>
+          </div>
+        </div>
         <!-- Email Templates -->
         <div class="card" style="margin-top:24px">
           <div class="card-header"><h2>📋 Email Templates</h2><button class="btn btn-primary btn-small" onclick="openEmailTemplateModal()">+ New Template</button></div>
@@ -11413,7 +11438,7 @@ ${activity.notes||'No notes'}`);
               ${sig.email&&sig.phone?' • ':''}
               ${sig.phone?`<a href="tel:${sig.phone}" style="color:#3b82f6;text-decoration:none">${sig.phone}</a>`:''}
             </p>
-            ${sig.calendar?`<p style="margin:8px 0 0"><a href="${sig.calendar}" style="display:inline-block;background:#f59e0b;color:#1a1a1a;padding:6px 12px;border-radius:4px;text-decoration:none;font-size:12px;font-weight:bold">📅 Schedule a Call</a></p>`:''}
+            ${sig.calendar?`<p style="margin:8px 0 0"><a href="${sig.calendar}" style="display:inline-block;background:#111;color:#fff;padding:6px 12px;border-radius:4px;text-decoration:none;font-size:12px;font-weight:bold">📅 Schedule a Call</a></p>`:''}
           </td>
         </tr>
       </table>`;
