Add null checks to loadSignature

--- a/crm/index.html
+++ b/crm/index.html
@@ -11257,17 +11257,24 @@ ${activity.notes||'No notes'}`);
     
     function loadSignature(){
       const sig=JSON.parse(localStorage.getItem('email_signature')||'{}');
-      document.getElementById('sig-name').value=sig.name||currentUser?.name||'';
-      document.getElementById('sig-title').value=sig.title||'';
-      document.getElementById('sig-email').value=sig.email||currentUser?.email||'';
-      document.getElementById('sig-phone').value=sig.phone||'';
-      document.getElementById('sig-calendar').value=sig.calendar||'';
-      document.getElementById('sig-company').value=sig.company||'joe';
-      // Always use Google photo
+      const sigName=document.getElementById('sig-name');
+      const sigTitle=document.getElementById('sig-title');
+      const sigEmail=document.getElementById('sig-email');
+      const sigPhone=document.getElementById('sig-phone');
+      const sigCalendar=document.getElementById('sig-calendar');
+      const sigCompany=document.getElementById('sig-company');
+      const sigPhotoUrl=document.getElementById('sig-photo-url');
+      const sigPhotoPreview=document.getElementById('sig-photo-preview');
+      if(sigName)sigName.value=sig.name||currentUser?.name||'';
+      if(sigTitle)sigTitle.value=sig.title||'';
+      if(sigEmail)sigEmail.value=sig.email||currentUser?.email||'';
+      if(sigPhone)sigPhone.value=sig.phone||'';
+      if(sigCalendar)sigCalendar.value=sig.calendar||'';
+      if(sigCompany)sigCompany.value=sig.company||'joe';
       const photoUrl=currentUser?.avatar||'';
-      document.getElementById('sig-photo-url').value=photoUrl;
-      if(photoUrl){
-        document.getElementById('sig-photo-preview').innerHTML=`<img src="${photoUrl}" style="width:100%;height:100%;object-fit:cover" onerror="this.parentElement.innerHTML='<span style=\\'font-size:32px;color:var(--joe-gray)\\'>👤</span>'">`;
+      if(sigPhotoUrl)sigPhotoUrl.value=photoUrl;
+      if(sigPhotoPreview&&photoUrl){
+        sigPhotoPreview.innerHTML='<img src="'+photoUrl+'" style="width:100%;height:100%;object-fit:cover" onerror="this.parentElement.innerHTML=\'<span style=font-size:32px;color:var(--joe-gray)>👤</span>\'">';
       }
     }
     
