Update scheduling link on Email & Scheduling page

--- a/crm/index.html
+++ b/crm/index.html
@@ -11458,6 +11458,8 @@ ${activity.notes||'No notes'}`);
     
     function renderEmailTemplates(){
       loadSignature();
+      const schedLink=document.getElementById('scheduling-link');
+      if(schedLink&&teamMember)schedLink.value='https://joe.coffee/schedule/'+(teamMember.username||currentUser.email.split('@')[0]);
       document.getElementById('email-templates-list').innerHTML=emailTemplates.length?emailTemplates.map(t=>`
         <div style="display:flex;justify-content:space-between;align-items:center;padding:16px;border-bottom:1px solid var(--joe-light)">
           <div>
