Fix signature: black company link to joe.coffee

--- a/crm/index.html
+++ b/crm/index.html
@@ -11439,7 +11439,7 @@ ${activity.notes||'No notes'}`);
           <td style="vertical-align:top">
             <p style="margin:0 0 4px;font-weight:bold;font-size:16px">${sig.name}</p>
             ${sig.title?`<p style="margin:0 0 4px;color:#6b7280">${sig.title}</p>`:''}
-            ${sig.company?`<p style="margin:0 0 8px;font-weight:600;color:#f59e0b">${sig.company}</p>`:''}
+            ${sig.company?`<p style="margin:0 0 8px;font-weight:600"><a href="https://joe.coffee" style="color:#111;text-decoration:none">${sig.company}</a></p>`:''}
             <p style="margin:0;font-size:13px">
               ${sig.email?`<a href="mailto:${sig.email}" style="color:#3b82f6;text-decoration:none">${sig.email}</a>`:''}
               ${sig.email&&sig.phone?' • ':''}
