--- a/crm/index.html
+++ b/crm/index.html
@@ -1116,6 +1116,7 @@
                 <div class="form-group" style="margin:0"><label style="font-size:12px">Phone</label><input type="tel" id="sig-phone" placeholder="(555) 123-4567" style="padding:8px"></div>
                 <div class="form-group" style="margin:0"><label style="font-size:12px">Company</label><input type="text" id="sig-company" value="joe" placeholder="joe" style="padding:8px"></div>
                 <div class="form-group" style="margin:0"><label style="font-size:12px">Scheduling Link</label><input type="url" id="sig-calendar" placeholder="https://joe.coffee/schedule/you" style="padding:8px"></div>
+                <div class="form-group" style="margin:0;grid-column:span 2"><label style="font-size:12px">Company Logo URL</label><input type="url" id="sig-logo" placeholder="https://joe.coffee/images/logo.png" style="padding:8px"></div>
               </div>
             </div>
             <div style="display:flex;gap:8px;margin-top:16px">
@@ -2018,7 +2019,7 @@
         </div>
         <div class="form-group">
           <label style="display:flex;align-items:center;gap:8px;cursor:pointer">
-            <input type="checkbox" id="deal-email-signature" checked> Include email signature (from Gmail)
+            <input type="checkbox" id="deal-email-signature" checked> Include email signature
           </label>
           <div id="deal-email-signature-preview" style="margin-top:8px;padding:12px;background:#f9fafb;border-radius:8px;font-size:13px;color:#666;border-left:3px solid var(--joe-orange)"></div>
         </div>
@@ -6795,23 +6796,12 @@ async function showDealPage(id){
         templateSelect.innerHTML='<option value="">Custom message...</option>'+
           emailTemplates.map(t=>`<option value="${t.id}">${t.name}</option>`).join('');
         
-        // Fetch and show Gmail signature
+        // Show custom signature from Email & Scheduling settings
         const sigPreview=document.getElementById('deal-email-signature-preview');
         if(sigPreview){
-          if(googleToken){
-            sigPreview.innerHTML='<em>Loading signature from Gmail...</em>';
-            const sig=await fetchGmailSignature();
-            if(sig){
-              sigPreview.innerHTML=sig;
-              sigPreview.dataset.signature=sig;
-            }else{
-              sigPreview.innerHTML='<em>No Gmail signature found. Set one up in Gmail settings.</em>';
-              sigPreview.dataset.signature='';
-            }
-          }else{
-            sigPreview.innerHTML='<em>Connect Google to use your Gmail signature.</em>';
-            sigPreview.dataset.signature='';
-          }
+          const customSig=generateSignatureHTML();
+          sigPreview.innerHTML=customSig;
+          sigPreview.dataset.signature=customSig;
           sigPreview.style.display='block';
         }
         
@@ -11263,6 +11253,7 @@ ${activity.notes||'No notes'}`);
       const sigPhone=document.getElementById('sig-phone');
       const sigCalendar=document.getElementById('sig-calendar');
       const sigCompany=document.getElementById('sig-company');
+      const sigLogo=document.getElementById('sig-logo');
       const sigPhotoUrl=document.getElementById('sig-photo-url');
       const sigPhotoPreview=document.getElementById('sig-photo-preview');
       if(sigName)sigName.value=sig.name||currentUser?.name||'';
@@ -11271,6 +11262,7 @@ ${activity.notes||'No notes'}`);
       if(sigPhone)sigPhone.value=sig.phone||'';
       if(sigCalendar)sigCalendar.value=sig.calendar||'';
       if(sigCompany)sigCompany.value=sig.company||'joe';
+      if(sigLogo)sigLogo.value=sig.logo||'';
       const photoUrl=currentUser?.avatar||'';
       if(sigPhotoUrl)sigPhotoUrl.value=photoUrl;
       if(sigPhotoPreview&&photoUrl){
@@ -11286,6 +11278,7 @@ ${activity.notes||'No notes'}`);
         phone:document.getElementById('sig-phone').value,
         calendar:document.getElementById('sig-calendar').value,
         company:document.getElementById('sig-company').value,
+        logo:document.getElementById('sig-logo')?.value||'',
         photo:currentUser?.avatar||''
       };
       localStorage.setItem('email_signature',JSON.stringify(sig));
@@ -11432,7 +11425,7 @@ ${activity.notes||'No notes'}`);
     function generateSignatureHTML(){
       const sig=JSON.parse(localStorage.getItem('email_signature')||'{}');
       const photo=currentUser?.avatar||sig.photo||'';
-      if(!sig.name)return'<p style="color:#6b7280">Set up your signature in Email Templates</p>';
+      if(!sig.name)return'<p style="color:#6b7280">Set up your signature in Email & Scheduling</p>';
       return`<table cellpadding="0" cellspacing="0" style="font-family:Arial,sans-serif;font-size:14px;color:#1a1a1a">
         <tr>
           ${photo?`<td style="padding-right:15px;vertical-align:top"><img src="${photo}" width="80" height="80" style="border-radius:50%"></td>`:''}
@@ -11446,6 +11439,7 @@ ${activity.notes||'No notes'}`);
               ${sig.phone?`<a href="tel:${sig.phone}" style="color:#3b82f6;text-decoration:none">${sig.phone}</a>`:''}
             </p>
             ${sig.calendar?`<p style="margin:8px 0 0"><a href="${sig.calendar}" style="display:inline-block;background:#111;color:#fff;padding:6px 12px;border-radius:4px;text-decoration:none;font-size:12px;font-weight:bold">📅 Schedule a Call</a></p>`:''}
+            ${sig.logo?`<p style="margin:12px 0 0"><img src="${sig.logo}" style="max-width:120px;max-height:60px"></p>`:''}
           </td>
         </tr>
       </table>`;
