Fix email template merge fields to support dot notation

--- a/crm/index.html
+++ b/crm/index.html
@@ -8388,7 +8388,19 @@ ${activity.notes||'No notes'}`);
           '{{shop_name}}':shop?.name||'',
           '{{email}}':contact?.email||shop?.email||'',
           '{{sender_name}}':currentUser?.name||currentUser?.email?.split('@')[0]||'',
-          '{{sender_email}}':currentUser?.email||''
+          '{{sender_email}}':currentUser?.email||'',
+          '{{contact.first_name}}':contact?.first_name||'',
+          '{{contact.last_name}}':contact?.last_name||'',
+          '{{contact.email}}':contact?.email||'',
+          '{{company.name}}':shop?.name||'',
+          '{{shop.name}}':shop?.name||'',
+          '{{shop.state}}':shop?.state||'',
+          '{{shop.city}}':shop?.city||'',
+          '{{user.name}}':currentUser?.name||currentUser?.email?.split('@')[0]||'',
+          '{{user.email}}':currentUser?.email||'',
+          '{{meeting.date}}':'[Meeting Date]',
+          '{{meeting.time}}':'[Meeting Time]',
+          '{{meeting.link}}':'[Meeting Link]'
         };
         
         Object.entries(replacements).forEach(([key,val])=>{
