Fix merge field replacement to prevent corruption

--- a/crm/index.html
+++ b/crm/index.html
@@ -8404,8 +8404,10 @@ ${activity.notes||'No notes'}`);
         };
         
         Object.entries(replacements).forEach(([key,val])=>{
-          subject=subject.split(key).join(val);
-          body=body.split(key).join(val);
+          if(key && key.length > 0){
+            subject=subject.replaceAll(key,val);
+            body=body.replaceAll(key,val);
+          }
         });
         
         document.getElementById('deal-email-subject').value=subject;
