Add Edit button to admin, allow joe team shop access

--- a/owner/admin.html
+++ b/owner/admin.html
@@ -481,8 +481,9 @@
             <td>${shop.phone_clicks || 0}</td>
             <td>${shop.social_clicks || 0}</td>
             <td>${shop.upvote_count || 0}</td>
-            <td>
+            <td style="display:flex;gap:6px">
               <a href="${shopUrl}" target="_blank" class="btn-view">View</a>
+              <a href="/owner/?shop_id=${shop.id}" target="_blank" class="btn-view" style="background:#3b82f6">Edit</a>
             </td>
           </tr>
         `;
