Update owner dashboard upgrade banner to promote joe OS

--- a/owner/index.html
+++ b/owner/index.html
@@ -174,9 +174,9 @@
     </div>
 
     <div class="upgrade-banner">
-      <h3>🚀 Want to start selling online?</h3>
-      <p>Connect your Shopify store or build a menu to start accepting orders.</p>
-      <button class="btn" onclick="alert('Coming soon!')">Learn More</button>
+      <h3>🚀 Ready to grow your business?</h3>
+      <p>Join 500+ independent coffee shops on joe—the complete operating system with POS, mobile ordering, loyalty, and 2.75% flat processing. One platform that runs your shop and grows demand collectively.</p>
+      <a href="/for-coffee-shops/" class="btn" target="_blank">Learn About joe OS →</a>
     </div>
   </div>
 
