Auto-populate Google and Yelp URLs from IDs

--- a/owner/index.html
+++ b/owner/index.html
@@ -444,8 +444,13 @@
       // Populate additional links
       document.getElementById('editTiktok').value = shop.tiktok_url || '';
       document.getElementById('editTwitter').value = shop.twitter_url || '';
-      document.getElementById('editGoogleBusiness').value = shop.google_business_url || '';
-      document.getElementById('editYelp').value = shop.yelp_url || '';
+      // Construct Google Business URL from place_id if we have it
+      const googleUrl = shop.google_business_url || (shop.google_place_id ? `https://www.google.com/maps/place/?q=place_id:${shop.google_place_id}` : '');
+      document.getElementById('editGoogleBusiness').value = googleUrl;
+      
+      // Construct Yelp URL from yelp_id if we have it
+      const yelpUrl = shop.yelp_url || (shop.yelp_id ? `https://www.yelp.com/biz/${shop.yelp_id}` : '');
+      document.getElementById('editYelp').value = yelpUrl;
       
       // Populate hours editor
       populateHoursEditor(shop.hours);
