--- a/owner/index.html
+++ b/owner/index.html
@@ -188,7 +188,8 @@
             <button type="button" class="btn btn-secondary" onclick="importInstagramPhoto()">Import</button>
           </div>
         </div>
-        !-- Instagram Posts -->
+
+        !<-- Instagram Posts -->
         <div id="instagramPosts" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:12px;margin-top:1rem">
         </div>
 
