--- a/owner/index.html
+++ b/owner/index.html
@@ -189,7 +189,7 @@
           </div>
         </div>
 
-        !<-- Instagram Posts -->
+        <!-- Instagram Posts -->
         <div id="instagramPosts" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:12px;margin-top:1rem">
         </div>
 
