Hide Instagram import for now

--- a/owner/index.html
+++ b/owner/index.html
@@ -180,7 +180,7 @@
           <p style="font-size:12px;color:#666;margin-top:4px">Add photos of your shop, drinks, food, interior</p>
         </div>
         
-        <!-- Import from Instagram -->
+        <!-- Import from Instagram - hidden for now
         <div>
           <label style="font-size:0.875rem;font-weight:500;margin-bottom:0.5rem;display:block">Import from Instagram</label>
           <div style="display:flex;gap:8px">
@@ -188,7 +188,7 @@
             <button type="button" class="btn btn-secondary" onclick="importInstagramPhoto()">Import</button>
           </div>
         </div>
-
+        -->
         <!-- Instagram Posts -->
         <div id="instagramPosts" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:12px;margin-top:1rem">
         </div>
