Fix typo in updateIcpFitScore

--- a/crm/index.html
+++ b/crm/index.html
@@ -5382,7 +5382,7 @@ async function showDealPage(id){
         }
       }
 
-        ffunction updateIcpFitScore() {
+        function updateIcpFitScore() {
           const wifi = document.getElementById('deal-page-wifi').checked;
           const skipLine = document.getElementById('deal-page-skip-line').checked;
           const queue = document.getElementById('deal-page-queue').checked;
