--- a/crm/index.html
+++ b/crm/index.html
@@ -3053,30 +3053,48 @@
 
     // Check for existing session on load
     async function initAuth(){
-  const hash = window.location.hash.substring(1);
-  if(hash && hash.includes('access_token')){
-    const params = new URLSearchParams(hash);
-    const access_token = params.get('access_token');
-    const refresh_token = params.get('refresh_token');
-    if(access_token && refresh_token){
-      const{data,error} = await db.auth.setSession({access_token, refresh_token});
-      if(error) console.error('setSession error:', error);
-      if(data?.user){
-        handleLogin(data.user);
-        history.replaceState(null,'',window.location.pathname);
-        return;
+      const hash = window.location.hash.substring(1);
+      if(hash && hash.includes('access_token')){
+        const params = new URLSearchParams(hash);
+        const access_token = params.get('access_token');
+        const refresh_token = params.get('refresh_token');
+        if(access_token){
+          // Decode JWT payload directly (bypass Supabase auth)
+          try {
+            const payload = JSON.parse(atob(access_token.split('.')[1]));
+            const user = {
+              id: payload.sub,
+              email: payload.email,
+              user_metadata: payload.user_metadata
+            };
+            // Store tokens for API calls
+            localStorage.setItem('sb-access-token', access_token);
+            localStorage.setItem('sb-refresh-token', refresh_token);
+            handleLogin(user);
+            history.replaceState(null,'',window.location.pathname);
+            return;
+          } catch(e) {
+            console.error('JWT decode error:', e);
+          }
+        }
+      }
+      // Check localStorage for existing session
+      const stored_token = localStorage.getItem('sb-access-token');
+      if(stored_token){
+        try {
+          const payload = JSON.parse(atob(stored_token.split('.')[1]));
+          if(payload.exp * 1000 > Date.now()){
+            const user = {id: payload.sub, email: payload.email, user_metadata: payload.user_metadata};
+            handleLogin(user);
+            return;
+          } else {
+            localStorage.removeItem('sb-access-token');
+            localStorage.removeItem('sb-refresh-token');
+          }
+        } catch(e) {}
       }
     }
-  }
-  const{data:{session},error}=await db.auth.getSession();
-  if(error)console.error('getSession error:',error);
-  if(session?.user)handleLogin(session.user);
-  db.auth.onAuthStateChange((event,session)=>{
-    if(event==='SIGNED_IN'&&session?.user)handleLogin(session.user);
-    if(event==='SIGNED_OUT')location.reload();
-  });
-}
-initAuth();
+    initAuth();
 
     async function signInWithGoogle(){
       const{error}=await db.auth.signInWithOAuth({
