fix: wrap setSession in try-catch to handle AbortError

--- a/crm/index.html
+++ b/crm/index.html
@@ -3056,44 +3056,43 @@
 
     // Check for existing session on load
     async function initAuth(){
-  const hash = window.location.hash.substring(1);
-  if(hash && hash.includes('access_token')){
-    const params = new URLSearchParams(hash);
-    const access_token = params.get('access_token');
-    const refresh_token = params.get('refresh_token');
-    if(access_token){
-      try {
-        // Set session in Supabase client first
-        await db.auth.setSession({access_token, refresh_token});
-        const payload = JSON.parse(atob(access_token.split('.')[1]));
-        const user = {id: payload.sub, email: payload.email, user_metadata: payload.user_metadata};
-        localStorage.setItem('sb-access-token', access_token);
-        localStorage.setItem('sb-refresh-token', refresh_token);
-        handleLogin(user);
-        history.replaceState(null,'',window.location.pathname);
-        return;
-      } catch(e) { console.error('Auth error:', e); }
-    }
-  }
-  // Check localStorage for existing session
-  const stored_token = localStorage.getItem('sb-access-token');
-  const stored_refresh = localStorage.getItem('sb-refresh-token');
-  if(stored_token && stored_refresh){
-    try {
-      const payload = JSON.parse(atob(stored_token.split('.')[1]));
-      if(payload.exp * 1000 > Date.now()){
-        await db.auth.setSession({access_token: stored_token, refresh_token: stored_refresh});
-        const user = {id: payload.sub, email: payload.email, user_metadata: payload.user_metadata};
-        handleLogin(user);
-        return;
-      } else {
-        localStorage.removeItem('sb-access-token');
-        localStorage.removeItem('sb-refresh-token');
+      const hash = window.location.hash.substring(1);
+      if(hash && hash.includes('access_token')){
+        const params = new URLSearchParams(hash);
+        const access_token = params.get('access_token');
+        const refresh_token = params.get('refresh_token');
+        if(access_token){
+          try {
+            const payload = JSON.parse(atob(access_token.split('.')[1]));
+            const user = {id: payload.sub, email: payload.email, user_metadata: payload.user_metadata};
+            localStorage.setItem('sb-access-token', access_token);
+            localStorage.setItem('sb-refresh-token', refresh_token);
+            // Try to set session but don't fail if it errors
+            try { await db.auth.setSession({access_token, refresh_token}); } catch(e) { console.log('setSession skipped:', e.message); }
+            handleLogin(user);
+            history.replaceState(null,'',window.location.pathname);
+            return;
+          } catch(e) { console.error('Auth error:', e); }
+        }
       }
-    } catch(e) { console.error('Session restore error:', e); }
-  }
-}
-initAuth();
+      const stored_token = localStorage.getItem('sb-access-token');
+      const stored_refresh = localStorage.getItem('sb-refresh-token');
+      if(stored_token && stored_refresh){
+        try {
+          const payload = JSON.parse(atob(stored_token.split('.')[1]));
+          if(payload.exp * 1000 > Date.now()){
+            try { await db.auth.setSession({access_token: stored_token, refresh_token: stored_refresh}); } catch(e) { console.log('setSession skipped:', e.message); }
+            const user = {id: payload.sub, email: payload.email, user_metadata: payload.user_metadata};
+            handleLogin(user);
+            return;
+          } else {
+            localStorage.removeItem('sb-access-token');
+            localStorage.removeItem('sb-refresh-token');
+          }
+        } catch(e) { console.error('Session restore error:', e); }
+      }
+    }
+    initAuth();
 
     async function signInWithGoogle(){
       const{error}=await db.auth.signInWithOAuth({
